[package]
name = "scaloscope"
version = "0.0.1"
edition = "2021"
authors = ["Thelonious Cooper <theloni@eecs.berkeley.edu>"]
license = "MIT"

description = "terminal constant-q spectrogram plugin via NIH-plug framework"
[features]
smol = ["iced_baseview/smol"]

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]


[dependencies]
iced_baseview = { git = "https://github.com/BillyDM/nih-plug.git", default-features = false, features = ["nih_log"] }
nih_plug = { git = "https://github.com/BillyDM/nih-plug.git", default-features = false, features=["standalone", "assert_process_allocs"]}
nih_plug_iced = { git = "https://github.com/BillyDM/nih-plug.git", default-features = false, features = ["wgpu-bare", "smol"] }
iced_term = "0.8.0"
# Important: `wgpu` is extremely spammy with its logs, so disable it by adding these crates:
log = { version = "0.4", features = ["max_level_debug"] }
tracing = { version = "0.1.44", default-features = true, features = [
    "max_level_info",
] }
atomic_refcell = "0.1.13"
crossbeam = "0.8.4"
serde = { version = "1.0.228", features = ["derive"] }
throbber-widgets-tui = "0.11.0"
atomic_float = "1.1.0"

[target.'cfg(windows)'.dependencies]
cpal = { version = "0.16", features = ["asio", "audio_thread_priority"] }
